--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ div {
     grid-row: 1/13;
     display:grid;
     grid-template-rows: repeat(12, auto);
+    height: 100%;
 }
 
 .right-side{
@@ -37,15 +38,10 @@ div {
     grid-row: 1/3;
     display: grid;
     grid-template-columns: 2fr 1fr;
- 
-   
 }
-
 
 .first-menu{
     grid-row:3/6;
-    
-   
 }
 
 .second-menu{
@@ -54,6 +50,18 @@ div {
 
 .main-content{
     grid-row: 1/3;
+    height: 100%;
+   
+}
+
+.project-tiles{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    
+    gap:10px;
+    padding: 10px;
+
+    
 }
 
 .menu-icon{
