--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ html, body {
     height: 100%;
 }
 
-div {
+/*div {
     border:1px solid red;
-}
+}*/
 
 .container{
     display: grid;
@@ -19,6 +19,7 @@ div {
     display: grid;
     grid-template-columns: 5fr 1.8fr;
     height: 100%;
+    background-color: #e2e9f1;
 }
 
 .side-bar{
@@ -26,12 +27,14 @@ div {
     display:grid;
     grid-template-rows: repeat(12, auto);
     height: 100%;
+    background-color: #1c94d3;
 }
 
 .right-side{
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     height: 100%;
+    
 }
 
 .header{
@@ -51,6 +54,7 @@ div {
 .main-content{
     grid-row: 1/3;
     height: 100%;
+    background-color: #e2e9f1;
    
 }
 
@@ -59,7 +63,15 @@ div {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 10px;
     padding:10px;
+    
+    
 }
+
+.project{
+    background-color: white;
+}
+
+
 
 .menu-icon{
 
@@ -75,4 +87,39 @@ ul,li{
    
 
     
+}
+
+.side-content{
+    background-color: #e2e9f1;
+    height: 100%;
+
+}
+
+.trending{
+    background-color: white;
+}
+
+.announcement{
+    background-color: white;
+}
+
+.announcements{
+
+    padding-right: 10px;
+   
+}
+
+.trendings{
+
+    padding-right: 10px;
+   
+}
+
+.side-bar svg{
+    fill: white;
+}
+
+svg{
+    height: 24px;
+    width: 24px;
 }
